feat(Api): add facade for auth

--- a/Currency.Api/appsettings.json
+++ b/Currency.Api/appsettings.json
@@ -5,5 +5,17 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "AuthSettings": {
+    "Secret": "",
+    "TokenExpirationMinutes": 1,
+    "Issuer": "",
+    "Audience": ""
+  },
+  "RateLimiterSettings": {
+    "PermitLimit": 1,
+    "DurationMilliseconds": 1,
+    "QueueLimit": 1,
+    "QueueOrder": "OldestFirst"
+  }
 }
