feat(Api): implement auth
implement auth with jwt bearer and 2 endpoints

--- a/Currency.Api/appsettings.json
+++ b/Currency.Api/appsettings.json
@@ -6,16 +6,26 @@
     }
   },
   "AllowedHosts": "*",
-  "AuthSettings": {
-    "Secret": "",
-    "TokenExpirationMinutes": 1,
-    "Issuer": "",
-    "Audience": ""
-  },
   "RateLimiterSettings": {
     "PermitLimit": 1,
     "DurationMilliseconds": 1,
     "QueueLimit": 1,
     "QueueOrder": "OldestFirst"
-  }
+  },
+  "ServicesSettings": {},
+  "InfrastructureSettings": {
+    "JwtSettings": {
+      "Issuer": "",
+      "Audience": "",
+      "AccessTokenTtlInMinutes": 2,
+      "RefreshTokenTtlInDays": 360,
+      "SecurityKey": ""
+    },
+    "RedisSettings": {
+      "ConnectionString": "",
+      "EntitiesDatabaseNumber": 0,
+      "RefreshTokensDatabaseNumber": 1
+    }
+  },
+  "Users": []
 }
