--- a/Currency.Api/Currency.Api.csproj
+++ b/Currency.Api/Currency.Api.csproj
@@ -25,8 +25,10 @@
     </ItemGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\Currency.Data\Currency.Data.csproj" />
       <ProjectReference Include="..\Currency.Facades.Contracts\Currency.Facades.Contracts.csproj" />
       <ProjectReference Include="..\Currency.Facades\Currency.Facades.csproj" />
+      <ProjectReference Include="..\Currency.Infrastructure\Currency.Infrastructure.csproj" />
       <ProjectReference Include="..\Currency.Services\Currency.Services.csproj" />
     </ItemGroup>
 
