--- a/Currency.Facades.Contracts/Currency.Facades.Contracts.csproj
+++ b/Currency.Facades.Contracts/Currency.Facades.Contracts.csproj
@@ -10,4 +10,8 @@
       <ProjectReference Include="..\Currency.Domain\Currency.Domain.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+    </ItemGroup>
+
 </Project>
