--- a/Tests/UnitTests/Currency.Services.Tests/Currency.Services.Tests.csproj
+++ b/Tests/UnitTests/Currency.Services.Tests/Currency.Services.Tests.csproj
@@ -9,8 +9,10 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="Bogus" Version="35.6.3" />
         <PackageReference Include="coverlet.collector" Version="6.0.2"/>
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.12.0"/>
+        <PackageReference Include="Moq" Version="4.20.72" />
         <PackageReference Include="NUnit" Version="4.2.2"/>
         <PackageReference Include="NUnit.Analyzers" Version="4.4.0"/>
         <PackageReference Include="NUnit3TestAdapter" Version="4.6.0"/>
@@ -18,6 +20,16 @@
 
     <ItemGroup>
         <Using Include="NUnit.Framework"/>
+    </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="Domain\" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\..\..\Currency.Data.Contracts\Currency.Data.Contracts.csproj" />
+      <ProjectReference Include="..\..\..\Currency.Infrastructure.Contracts\Currency.Infrastructure.Contracts.csproj" />
+      <ProjectReference Include="..\..\..\Currency.Services\Currency.Services.csproj" />
     </ItemGroup>
 
 </Project>
