--- a/Currency.Api/Currency.Api.csproj
+++ b/Currency.Api/Currency.Api.csproj
@@ -13,6 +13,8 @@
         <PackageReference Include="Autofac.Extensions.DependencyInjection" Version="10.0.0"/>
         <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="9.0.5"/>
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.5"/>
+        <PackageReference Include="Microsoft.Extensions.Http.Polly" Version="9.0.6" />
+        <PackageReference Include="Microsoft.Extensions.Http.Resilience" Version="9.6.0" />
     </ItemGroup>
 
     <ItemGroup>
