feat(Api): populate settings

--- a/Currency.Api/appsettings.Development.json
+++ b/Currency.Api/appsettings.Development.json
@@ -6,25 +6,35 @@
     }
   },
   "AllowedHosts": "*",
-  "RateLimiterSettings": {
+  "RateLimiter": {
     "PermitLimit": 1,
     "DurationMilliseconds": 1,
     "QueueLimit": 1,
+    "RejectionStatusCode": 429,
     "QueueOrder": "OldestFirst"
   },
-  "ServicesSettings": {},
-  "InfrastructureSettings": {
-    "JwtSettings": {
+  "Infrastructure": {
+    "Jwt": {
       "Issuer": "issuer",
       "Audience": "aud",
       "AccessTokenTtlInMinutes": 5,
       "RefreshTokenTtlInDays": 365,
       "SecurityKey": "SECRET_CURRENCY_1_SECRET_CURRENCY_2"
     },
-    "RedisSettings": {
+    "Redis": {
       "ConnectionString": "redis:6379,abortConnect=false,syncTimeout=3000",
       "EntitiesDatabaseNumber": 0,
       "RefreshTokensDatabaseNumber": 1
+    },
+    "Integrations": {
+      "Frankfurter": {
+        "BaseAddress": "https://api.frankfurter.dev",
+        "TimeoutSeconds": 5,
+        "RetryCount": 3,
+        "RetryExponentialIntervalSeconds": 5,
+        "CircuitBreakerDurationBreakSeconds": 30,
+        "CircuitBreakerMaxExceptions": 6
+      }
     }
   },
   "Users": [
