--- a/Currency.Api/appsettings.json
+++ b/Currency.Api/appsettings.json
@@ -6,25 +6,35 @@
     }
   },
   "AllowedHosts": "*",
-  "RateLimiterSettings": {
+  "RateLimiter": {
     "PermitLimit": 1,
     "DurationMilliseconds": 1,
     "QueueLimit": 1,
+    "RejectionStatusCode": 429,
     "QueueOrder": "OldestFirst"
   },
-  "ServicesSettings": {},
-  "InfrastructureSettings": {
-    "JwtSettings": {
+  "Infrastructure": {
+    "Jwt": {
       "Issuer": "",
       "Audience": "",
       "AccessTokenTtlInMinutes": 2,
       "RefreshTokenTtlInDays": 360,
       "SecurityKey": ""
     },
-    "RedisSettings": {
+    "Redis": {
       "ConnectionString": "",
       "EntitiesDatabaseNumber": 0,
       "RefreshTokensDatabaseNumber": 1
+    },
+    "Integrations": {
+      "Frankfurter": {
+        "BaseAddress": "",
+        "TimeoutSeconds": 0,
+        "RetryCount": 1,
+        "RetryExponentialIntervalSeconds": 5,
+        "CircuitBreakerDurationBreakSeconds": 30,
+        "CircuitBreakerMaxExceptions": 2
+      }
     }
   },
   "Users": []
