feat(Infrastructure): implement Frankfurter API (#6)

--- a/Currency.Infrastructure/Currency.Infrastructure.csproj
+++ b/Currency.Infrastructure/Currency.Infrastructure.csproj
@@ -12,9 +12,11 @@
 
     <ItemGroup>
         <PackageReference Include="Autofac.Extensions.DependencyInjection" Version="10.0.0"/>
-        <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="8.12.0" />
+        <PackageReference Include="Microsoft.Extensions.Http" Version="9.0.6"/>
+        <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="8.12.0"/>
+        <PackageReference Include="Newtonsoft.Json" Version="13.0.3"/>
         <PackageReference Include="StackExchange.Redis" Version="2.8.37"/>
-        <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.12.0" />
+        <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.12.0"/>
     </ItemGroup>
 
 </Project>
