feat(Api): resolve RBAC

--- a/Currency.Api/appsettings.Development.json
+++ b/Currency.Api/appsettings.Development.json
@@ -6,6 +6,7 @@
     }
   },
   "AllowedHosts": "*",
+  "DataProtectionKeysDirectory": "./Keys",
   "RateLimiter": {
     "PermitLimit": 1,
     "DurationMilliseconds": 1,
