--- a/Currency.Api/appsettings.json
+++ b/Currency.Api/appsettings.json
@@ -6,6 +6,7 @@
     }
   },
   "AllowedHosts": "*",
+  "DataProtectionKeysDirectory": "",
   "RateLimiter": {
     "PermitLimit": 1,
     "DurationMilliseconds": 1,
