--- a/Currency.Data.Contracts/Currency.Data.Contracts.csproj
+++ b/Currency.Data.Contracts/Currency.Data.Contracts.csproj
@@ -7,6 +7,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <ProjectReference Include="..\Currency.Common\Currency.Common.csproj" />
         <ProjectReference Include="..\Currency.Domain\Currency.Domain.csproj"/>
     </ItemGroup>
 
