--- a/Currency.Facades/Currency.Facades.csproj
+++ b/Currency.Facades/Currency.Facades.csproj
@@ -8,6 +8,7 @@
 
     <ItemGroup>
         <PackageReference Include="Autofac.Extensions.DependencyInjection" Version="10.0.0"/>
+        <PackageReference Include="ISO.4217.CurrencyCodes" Version="1.0.10" />
     </ItemGroup>
 
     <ItemGroup>
