--- a/Currency.Infrastructure/Currency.Infrastructure.csproj
+++ b/Currency.Infrastructure/Currency.Infrastructure.csproj
@@ -7,6 +7,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <ProjectReference Include="..\Currency.Common\Currency.Common.csproj" />
         <ProjectReference Include="..\Currency.Infrastructure.Contracts\Currency.Infrastructure.Contracts.csproj"/>
     </ItemGroup>
 
