feat(Api): implement endpoints (#10)

--- a/Currency.Api/appsettings.Development.json
+++ b/Currency.Api/appsettings.Development.json
@@ -6,6 +6,7 @@
     }
   },
   "AllowedHosts": "*",
+  "DataProtectionKeysDirectory": "./Keys",
   "RateLimiter": {
     "PermitLimit": 1,
     "DurationMilliseconds": 1,
@@ -17,7 +18,7 @@
     "Jwt": {
       "Issuer": "issuer",
       "Audience": "aud",
-      "AccessTokenTtlInMinutes": 5,
+      "AccessTokenTtlInMinutes": 30,
       "RefreshTokenTtlInDays": 365,
       "SecurityKey": "SECRET_CURRENCY_1_SECRET_CURRENCY_2"
     },
