--- a/Currency.Facades.Contracts/Currency.Facades.Contracts.csproj
+++ b/Currency.Facades.Contracts/Currency.Facades.Contracts.csproj
@@ -7,11 +7,8 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <ProjectReference Include="..\Currency.Common\Currency.Common.csproj" />
         <ProjectReference Include="..\Currency.Domain\Currency.Domain.csproj"/>
-    </ItemGroup>
-
-    <ItemGroup>
-        <PackageReference Include="Newtonsoft.Json" Version="13.0.3"/>
     </ItemGroup>
 
 </Project>
