--- a/Currency.Api/Currency.Api.csproj
+++ b/Currency.Api/Currency.Api.csproj
@@ -8,30 +8,43 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Asp.Versioning.Http" Version="8.1.0"/>
-        <PackageReference Include="Asp.Versioning.Mvc.ApiExplorer" Version="8.1.0"/>
-        <PackageReference Include="Autofac.Extensions.DependencyInjection" Version="10.0.0"/>
-        <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="9.0.5"/>
-        <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.5"/>
-        <PackageReference Include="Microsoft.Extensions.Http.Polly" Version="9.0.6"/>
-        <PackageReference Include="Microsoft.Extensions.Http.Resilience" Version="9.6.0"/>
+        <PackageReference Include="Asp.Versioning.Http" Version="8.1.0" />
+        <PackageReference Include="Asp.Versioning.Mvc.ApiExplorer" Version="8.1.0" />
+        <PackageReference Include="Autofac.Extensions.DependencyInjection" Version="10.0.0" />
+        <PackageReference Include="HEF.Extensions.OpenTelemetry.Exporter.OpenTelemetryProtocol" Version="1.0.0" />
+        <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="9.0.5" />
+        <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.5" />
+        <PackageReference Include="Microsoft.Extensions.Http.Polly" Version="9.0.6" />
+        <PackageReference Include="Microsoft.Extensions.Http.Resilience" Version="9.6.0" />
+        <PackageReference Include="OpenTelemetry" Version="1.12.0" />
+        <PackageReference Include="OpenTelemetry.Exporter.Console" Version="1.12.0" />
+        <PackageReference Include="OpenTelemetry.Exporter.OpenTelemetryProtocol" Version="1.12.0" />
+        <PackageReference Include="OpenTelemetry.Extensions.Hosting" Version="1.12.0" />
+        <PackageReference Include="OpenTelemetry.Instrumentation.AspNetCore" Version="1.12.0" />
+        <PackageReference Include="OpenTelemetry.Instrumentation.Http" Version="1.12.0" />
+        <PackageReference Include="Serilog.AspNetCore" Version="9.0.0" />
+        <PackageReference Include="Serilog.Enrichers.Environment" Version="3.0.1" />
+        <PackageReference Include="Serilog.Enrichers.HttpContext" Version="8.0.9" />
+        <PackageReference Include="Serilog.Extensions.Logging" Version="9.0.2" />
+        <PackageReference Include="Serilog.Sinks.Console" Version="6.0.0" />
+        <PackageReference Include="Serilog.Sinks.Elasticsearch" Version="10.0.0" />
     </ItemGroup>
 
     <ItemGroup>
         <Content Include="..\.dockerignore">
             <Link>.dockerignore</Link>
         </Content>
-        <Content Update="appsettings.Development.json" CopyToOutputDirectory="Always"/>
-        <Content Update="appsettings.Production.json" CopyToOutputDirectory="Always"/>
-        <Content Update="appsettings.Test.json" CopyToOutputDirectory="Always"/>
+        <Content Update="appsettings.Development.json" CopyToOutputDirectory="Always" />
+        <Content Update="appsettings.Production.json" CopyToOutputDirectory="Always" />
+        <Content Update="appsettings.Test.json" CopyToOutputDirectory="Always" />
     </ItemGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\Currency.Data\Currency.Data.csproj"/>
-        <ProjectReference Include="..\Currency.Facades.Contracts\Currency.Facades.Contracts.csproj"/>
-        <ProjectReference Include="..\Currency.Facades\Currency.Facades.csproj"/>
-        <ProjectReference Include="..\Currency.Infrastructure\Currency.Infrastructure.csproj"/>
-        <ProjectReference Include="..\Currency.Services\Currency.Services.csproj"/>
+        <ProjectReference Include="..\Currency.Data\Currency.Data.csproj" />
+        <ProjectReference Include="..\Currency.Facades.Contracts\Currency.Facades.Contracts.csproj" />
+        <ProjectReference Include="..\Currency.Facades\Currency.Facades.csproj" />
+        <ProjectReference Include="..\Currency.Infrastructure\Currency.Infrastructure.csproj" />
+        <ProjectReference Include="..\Currency.Services\Currency.Services.csproj" />
     </ItemGroup>
 
 </Project>
