--- a/Tests/UnitTests/Currency.Infrastructure.Tests/Currency.Infrastructure.Tests.csproj
+++ b/Tests/UnitTests/Currency.Infrastructure.Tests/Currency.Infrastructure.Tests.csproj
@@ -9,20 +9,12 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="coverlet.collector" Version="6.0.2"/>
-        <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.12.0"/>
-        <PackageReference Include="Moq" Version="4.20.72" />
-        <PackageReference Include="NUnit" Version="4.2.2"/>
-        <PackageReference Include="NUnit.Analyzers" Version="4.4.0"/>
-        <PackageReference Include="NUnit3TestAdapter" Version="4.6.0"/>
-    </ItemGroup>
-
-    <ItemGroup>
         <Using Include="NUnit.Framework"/>
     </ItemGroup>
 
     <ItemGroup>
         <ProjectReference Include="..\..\..\Currency.Infrastructure\Currency.Infrastructure.csproj"/>
+        <ProjectReference Include="..\Currency.UnitTests\Currency.UnitTests.csproj" />
     </ItemGroup>
 
     <ItemGroup>
