--- a/Currency.Data/Currency.Data.csproj
+++ b/Currency.Data/Currency.Data.csproj
@@ -8,6 +8,7 @@
 
     <ItemGroup>
         <PackageReference Include="Autofac.Extensions.DependencyInjection" Version="10.0.0"/>
+        <PackageReference Include="Microsoft.Extensions.Logging" Version="9.0.6" />
         <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
         <PackageReference Include="StackExchange.Redis" Version="2.8.41"/>
     </ItemGroup>
