--- a/Currency.Services/Currency.Services.csproj
+++ b/Currency.Services/Currency.Services.csproj
@@ -13,6 +13,7 @@
 
     <ItemGroup>
         <PackageReference Include="Autofac.Extensions.DependencyInjection" Version="10.0.0"/>
+        <PackageReference Include="Microsoft.Extensions.Logging" Version="9.0.6" />
     </ItemGroup>
 
 </Project>
