--- a/Tests/UnitTests/Currency.Services.Tests/Currency.Services.Tests.csproj
+++ b/Tests/UnitTests/Currency.Services.Tests/Currency.Services.Tests.csproj
@@ -20,7 +20,26 @@
         <ProjectReference Include="..\..\..\Currency.Data.Contracts\Currency.Data.Contracts.csproj"/>
         <ProjectReference Include="..\..\..\Currency.Infrastructure.Contracts\Currency.Infrastructure.Contracts.csproj"/>
         <ProjectReference Include="..\..\..\Currency.Services\Currency.Services.csproj"/>
-        <ProjectReference Include="..\Currency.UnitTests\Currency.UnitTests.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <PackageReference Include="Bogus" Version="35.6.3" />
+      <PackageReference Include="coverlet.collector" Version="6.0.4">
+        <PrivateAssets>all</PrivateAssets>
+        <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      </PackageReference>
+      <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.14.1" />
+      <PackageReference Include="Moq" Version="4.20.72" />
+      <PackageReference Include="NUnit" Version="4.3.2" />
+      <PackageReference Include="NUnit.Analyzers" Version="4.9.1">
+        <PrivateAssets>all</PrivateAssets>
+        <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      </PackageReference>
+      <PackageReference Include="NUnit3TestAdapter" Version="5.0.0" />
+      <PackageReference Include="Serilog" Version="4.3.0" />
+      <PackageReference Include="Serilog.Extensions.Logging" Version="9.0.2" />
+      <PackageReference Include="Serilog.Sinks.Console" Version="6.0.0" />
+      <PackageReference Include="Serilog.Sinks.TextWriter" Version="3.0.0" />
     </ItemGroup>
 
 </Project>
