feat: update settings

--- a/Currency.Api/appsettings.json
+++ b/Currency.Api/appsettings.json
@@ -1,10 +1,6 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
+  "AppVersion": "1.0.0",
+  "Application": "Currency Converter",
   "AllowedHosts": "*",
   "DataProtectionKeysDirectory": "",
   "RateLimiter": {
@@ -14,7 +10,29 @@
     "RejectionStatusCode": 429,
     "QueueOrder": "OldestFirst"
   },
+  "Data": {
+    "Cache": {
+      "ExchangeRatesTtl": "00:00:05",
+      "ExchangeRatesHistoryTtl": "00:00:05",
+      "ConversionResultTtl": "00:00:05"
+    }
+  },
   "Infrastructure": {
+    "Logger": {
+      "EnableDebugOptions": true,
+      "Console": {
+        "ConsoleTemplate": "[{Timestamp:HH:mm:ss} {Level:u3}] {Message:lj} {NewLine}{Exception}",
+        "LogLevel": "Debug"
+      },
+      "ELK": {
+        "IndexFormat": "currency-converter-logs-{0:yyyy.MM.dd}",
+        "LogLevel": "Debug",
+        "LogEndpoint": "http://elasticsearch:9200"
+      },
+      "Telemetry": {
+        "JaegerEndpoint": "http://jaeger:4317"
+      }
+    },
     "Jwt": {
       "Issuer": "",
       "Audience": "",
@@ -24,7 +42,10 @@
     },
     "Redis": {
       "ConnectionString": "",
-      "RefreshTokensDatabaseNumber": 2
+      "RefreshTokensDatabaseNumber": 2,
+      "ExchangeRatesHistoryDatabaseNumber": 3,
+      "ExchangeRatesDatabaseNumber": 4,
+      "DataLockMilliseconds": 1000
     },
     "Integrations": {
       "Frankfurter": {
@@ -36,6 +57,5 @@
         "CircuitBreakerMaxExceptions": 2
       }
     }
-  },
-  "Users": []
+  }
 }
