TEST: setting up tests

--- a/src/Currency.Api/appsettings.json
+++ b/src/Currency.Api/appsettings.json
@@ -19,6 +19,7 @@
   },
   "Infrastructure": {
     "Logger": {
+      "DisableLogger": false,
       "EnableDebugOptions": true,
       "Console": {
         "ConsoleTemplate": "[{Timestamp:HH:mm:ss} {Level:u3}] {Message:lj} {NewLine}{Exception}",
