--- a/tests/unit-tests/Currency.Data.Tests/Currency.Data.Tests.csproj
+++ b/tests/unit-tests/Currency.Data.Tests/Currency.Data.Tests.csproj
@@ -28,4 +28,8 @@
         <Using Include="NUnit.Framework"/>
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\..\..\src\Currency.Data\Currency.Data.csproj" />
+    </ItemGroup>
+
 </Project>
