--- a/tests/unit-tests/Currency.Services.Tests/Currency.Services.Tests.csproj
+++ b/tests/unit-tests/Currency.Services.Tests/Currency.Services.Tests.csproj
@@ -13,15 +13,12 @@
     </ItemGroup>
 
     <ItemGroup>
-        <Folder Include="Domain\"/>
-    </ItemGroup>
-
-    <ItemGroup>
       <PackageReference Include="Bogus" Version="35.6.3" />
       <PackageReference Include="coverlet.collector" Version="6.0.4">
         <PrivateAssets>all</PrivateAssets>
         <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       </PackageReference>
+      <PackageReference Include="Microsoft.Extensions.Logging" Version="9.0.6" />
       <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.14.1" />
       <PackageReference Include="Moq" Version="4.20.72" />
       <PackageReference Include="NUnit" Version="4.3.2" />
