Chore: add app version

--- a/infra/docker-test/docker-compose.worker3.yaml
+++ b/infra/docker-test/docker-compose.worker3.yaml
@@ -7,6 +7,7 @@ services:
     image: currency-converter-api:latest
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
+      - APP_VERSION=${APP_VERSION}
     networks:
       - currency_network
     volumes:
