--- a/src/Currency.Infrastructure/Currency.Infrastructure.csproj
+++ b/src/Currency.Infrastructure/Currency.Infrastructure.csproj
@@ -17,6 +17,7 @@
         <PackageReference Include="Microsoft.Extensions.Logging" Version="9.0.6" />
         <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="8.12.0"/>
         <PackageReference Include="Newtonsoft.Json" Version="13.0.3"/>
+        <PackageReference Include="Polly" Version="8.6.0" />
         <PackageReference Include="StackExchange.Redis" Version="2.8.37"/>
         <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.12.0"/>
     </ItemGroup>
