--- a/infra/docker-test/docker-compose.worker.yaml
+++ b/infra/docker-test/docker-compose.worker.yaml
@@ -26,7 +26,7 @@ services:
         done;
         redis-cli -h redis < /data/init-redis.redis
     volumes:
-      - ../../resources/scripts/init-redis.redis:/data/init-redis.redis
+      - ./resources/scripts/init-redis.redis:/data/init-redis.redis
   
   elasticsearch:
     image: elasticsearch:9.0.2
