--- a/.github/workflows/testing-workflow.yaml
+++ b/.github/workflows/testing-workflow.yaml
@@ -5,25 +5,41 @@ on:
     branches: [ test ]
   workflow_dispatch:
 
+env:
+  IMAGE_NAME: ghcr.io/${{ github.repository_owner }}/currency-api
+
 jobs:
   build:
     runs-on: ubuntu-latest
+    outputs:
+      image_tag: ${{ steps.tag.outputs.tag }}
+    permissions:
+      packages: write
+      contents: read
+    env:
+      IMAGE_NAME: ghcr.io/${{ github.repository_owner }}/currency-api
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Setup .NET 9 SDK
-        uses: actions/setup-dotnet@v3
+      - name: Set up Docker buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Log in to GitHub Container Registry
+        uses: docker/login-action@v3
         with:
-          dotnet-version: '9.0.301'
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Install Make
-        run: sudo apt-get update && sudo apt-get install -y make
+      - name: Generate image tag
+        id: tag
+        run: echo "tag=test-${GITHUB_SHA::7}" >> $GITHUB_OUTPUT
 
-      - name: Restore and Build
+      - name: Build and push Docker image
         run: |
-          dotnet restore ./src/currency-converter.sln
-          dotnet build ./src/currency-converter.sln --configuration Release --no-restore
+          docker build -t $IMAGE_NAME:${{ steps.tag.outputs.tag }} -f src/Currency.Api/Dockerfile src
+          docker push $IMAGE_NAME:${{ steps.tag.outputs.tag }}
   
   unit-tests:
     needs: build
@@ -75,6 +91,9 @@ jobs:
         uses: actions/setup-dotnet@v3
         with:
           dotnet-version: '9.0.301'
+          
+      - name: Inject IMAGE_TAG into .env file
+        run: echo "IMAGE_TAG=${{ needs.build.outputs.image_tag }}" >> .env
 
       - name: Restore and Build
         run: |
@@ -82,7 +101,7 @@ jobs:
           dotnet build ./src/currency-converter.sln --configuration Release --no-restore
           
       - name: Start Currency API & WireMock
-        run: make integration_tests_up
+        run: make integration_tests_up IMAGE_TAG=${{ env.IMAGE_TAG }}
 
       - name: Run Integration Tests
         run: make test CATEGORY=Integration
