--- a/.github/workflows/master-workflow.yaml
+++ b/.github/workflows/master-workflow.yaml
@@ -1,12 +1,18 @@
-name: master-workflow.yaml
-run-name: Release build and tag
+name: Release
+run-name: 🚀 Release build and tag
+
 on:
   push:
     branches: [ master ]
 
+env:
+  IMAGE_NAME: ghcr.io/${{ github.repository_owner }}/currency-api
+
 jobs:
   build:
     runs-on: ubuntu-latest
+    outputs:
+      version_tag: ${{ steps.version.outputs.tag }}
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -16,22 +22,47 @@ jobs:
         with:
           dotnet-version: '9.0.301'
 
+      - name: Read version
+        id: version
+        run: |
+          VERSION_TAG="v$(cat VERSION.txt)"
+          echo "tag=$VERSION_TAG" >> $GITHUB_OUTPUT
+
       - name: Restore and Build
         run: |
           dotnet restore ./src/currency-converter.sln
           dotnet build ./src/currency-converter.sln --configuration Release --no-restore
-          
+
+      - name: Log in to GitHub Container Registry
+        uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.CURRENCY_CI }}
+
+      - name: Build and push Docker image with release tag
+        run: |
+          docker build -t $IMAGE_NAME:${{ steps.version.outputs.tag }} -f src/Currency.Api/Dockerfile src
+          docker push $IMAGE_NAME:${{ steps.version.outputs.tag }}
+
   tag:
     needs: build
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
 
-      - name: Read version and create Git tag
+      - name: Create Git tag and push
         run: |
-          VERSION_TAG="v$(cat VERSION.txt)"
-          git config user.name "GitHub Actions"
-          git config user.email "actions@github.com"
+          VERSION_TAG="${{ needs.build.outputs.version_tag }}"
+          if git rev-parse "$VERSION_TAG" >/dev/null 2>&1; then
+            echo "Tag $VERSION_TAG already exists. Skipping."
+            exit 0
+          fi
+          git config user.name "karmeev"
+          git config user.email "karmeevtech@gmail.com"
           git tag $VERSION_TAG
           git push origin $VERSION_TAG
