fix(Infrastructure): minimize worker pool

--- a/infra/docker/configs/appsettings.json
+++ b/infra/docker/configs/appsettings.json
@@ -19,7 +19,7 @@
   "Infrastructure": {
     "Logger": {
       "DisableLogger": false,
-      "EnableDebugOptions": true,
+      "EnableDebugOptions": false,
       "Console": {
         "ConsoleTemplate": "[{Timestamp:HH:mm:ss} {Level:u3}] {Message:lj} {NewLine}{Exception}",
         "LogLevel": "Information"
