--- a/infra/docker/nginx/nginx.conf
+++ b/infra/docker/nginx/nginx.conf
@@ -2,6 +2,7 @@ events {}
 
 http {
     upstream currency_api_upstream {
+        least_conn;
         server api:8080;
         server api-2:8080;
         server api-3:8080;
@@ -13,6 +14,7 @@ http {
         location / {
             proxy_pass http://currency_api_upstream;
             proxy_http_version 1.1;
+            proxy_set_header Connection "";
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
