--- a/infra/docker/docker-compose.master.yaml
+++ b/infra/docker/docker-compose.master.yaml
@@ -2,6 +2,7 @@ name: master-node
 services:
   nginx:
     image: nginx:latest
+    container_name: nginx
     ports:
       - "8080:80"
     volumes:
