ci: tests compose fix

--- a/infra/docker-test/docker-compose.worker3.yaml
+++ b/infra/docker-test/docker-compose.worker3.yaml
@@ -1,9 +1,9 @@
 name: worker-node-3
 services:
   api:
-    image: ghcr.io/karmeev/currency-api:v0.0.3
+    image: ghcr.io/karmeev/currency-api:${IMAGE_TAG}
     environment:
-      - APP_VERSION=0.0.3
+      - APP_VERSION=${APP_VERSION}
     networks:
       - currency_network
     volumes:
