--- a/src/Currency.Api/appsettings.json
+++ b/src/Currency.Api/appsettings.json
@@ -1,32 +1,32 @@
 {
   "Application": "Currency Converter",
   "AllowedHosts": "*",
-  "DataProtectionKeysDirectory": "",
+  "DataProtectionKeysDirectory": "./Keys",
   "RateLimiter": {
-    "PermitLimit": 1,
-    "DurationMilliseconds": 1,
-    "QueueLimit": 1,
+    "PermitLimit": 4,
+    "DurationMilliseconds": 1000,
+    "QueueLimit": 3,
     "RejectionStatusCode": 429,
     "QueueOrder": "OldestFirst"
   },
   "Data": {
     "Cache": {
-      "ExchangeRatesTtl": "00:00:05",
-      "ExchangeRatesHistoryTtl": "00:00:05",
-      "ConversionResultTtl": "00:00:05"
+      "ExchangeRatesTtl": "00:10:00",
+      "ExchangeRatesHistoryTtl": "00:10:00",
+      "ConversionResultTtl": "00:10:00"
     }
   },
   "Infrastructure": {
     "Logger": {
       "DisableLogger": false,
-      "EnableDebugOptions": true,
+      "EnableDebugOptions": false,
       "Console": {
         "ConsoleTemplate": "[{Timestamp:HH:mm:ss} {Level:u3}] {Message:lj} {NewLine}{Exception}",
-        "LogLevel": "Debug"
+        "LogLevel": "Information"
       },
       "ELK": {
         "IndexFormat": "currency-converter-logs-{0:yyyy.MM.dd}",
-        "LogLevel": "Debug",
+        "LogLevel": "Information",
         "LogEndpoint": "http://elasticsearch:9200"
       },
       "Telemetry": {
@@ -34,29 +34,27 @@
       }
     },
     "Jwt": {
-      "Issuer": "",
-      "Audience": "",
-      "AccessTokenTtlInMinutes": 2,
-      "RefreshTokenTtlInDays": 360,
-      "SecurityKey": ""
+      "Issuer": "issuer",
+      "Audience": "aud",
+      "AccessTokenTtlInMinutes": 30,
+      "RefreshTokenTtlInDays": 365,
+      "SecurityKey": "SECRET_CURRENCY_1_SECRET_CURRENCY_2"
     },
     "Redis": {
-      "ConnectionString": "",
+      "ConnectionString": "redis:6379,abortConnect=false,syncTimeout=3000",
       "RefreshTokensDatabaseNumber": 2,
       "ExchangeRatesHistoryDatabaseNumber": 3,
       "ExchangeRatesDatabaseNumber": 4,
-      "DataLockMilliseconds": 1000,
-      "DataLockRetryCount": 3,
-      "DataLockRetryDelayMilliseconds": 20
+      "DataLockMilliseconds": 1000
     },
     "Integrations": {
       "Frankfurter": {
-        "BaseAddress": "",
-        "TimeoutSeconds": 0,
-        "RetryCount": 1,
+        "BaseAddress": "https://api.frankfurter.dev",
+        "TimeoutSeconds": 10,
+        "RetryCount": 3,
         "RetryExponentialIntervalSeconds": 5,
         "CircuitBreakerDurationBreakSeconds": 30,
-        "CircuitBreakerMaxExceptions": 2
+        "CircuitBreakerMaxExceptions": 6
       }
     }
   }
