perf(Infrastructure): increase performance for workers
increase performance for workers and add count of workers to configuration

--- a/src/Currency.Api/appsettings.json
+++ b/src/Currency.Api/appsettings.json
@@ -16,6 +16,15 @@
       "ConversionResultTtl": "00:10:00"
     }
   },
+  "Services": {
+    "Workers": {
+      "Bandwidth": 10,
+      "ConsumeDelayInMilliseconds": 10,
+      "ExchangeRatesHistoryWorkers": 2,
+      "CurrencyConversionWorkers": 1,
+      "ExchangeRatesWorkers": 1
+    }
+  },
   "Infrastructure": {
     "Logger": {
       "DisableLogger": false,
