perf: optimize performance

--- a/infra/docker/configs/appsettings.json
+++ b/infra/docker/configs/appsettings.json
@@ -1,7 +1,7 @@
 {
   "Application": "Currency Converter",
   "AllowedHosts": "*",
-  "DataProtectionKeysDirectory": "./Keys",
+  "DataProtectionKeysDirectory": "./DataProtection-Keys",
   "RateLimiter": {
     "PermitLimit": 4,
     "DurationMilliseconds": 1000,
