--- a/infra/docker/configs/appsettings.json
+++ b/infra/docker/configs/appsettings.json
@@ -1,7 +1,7 @@
 {
   "Application": "Currency Converter",
   "AllowedHosts": "*",
-  "DataProtectionKeysDirectory": "./Keys",
+  "DataProtectionKeysDirectory": "./DataProtection-Keys",
   "RateLimiter": {
     "PermitLimit": 4,
     "DurationMilliseconds": 1000,
@@ -14,6 +14,15 @@
       "ExchangeRatesTtl": "00:10:00",
       "ExchangeRatesHistoryTtl": "00:10:00",
       "ConversionResultTtl": "00:10:00"
+    }
+  },
+  "Services": {
+    "Workers": {
+      "Bandwidth": 10,
+      "ConsumeDelayInMilliseconds": 1,
+      "ExchangeRatesHistoryWorkers": 3,
+      "CurrencyConversionWorkers": 3,
+      "ExchangeRatesWorkers": 4
     }
   },
   "Infrastructure": {
